FIX REAPETING SMARTECO
FIX REAPETING SMARTECO

--- a/root/index.html
+++ b/root/index.html
@@ -259,7 +259,7 @@
     <!-- Footer Section -->
     <footer>
         <div class="company-info">
-            <p id="footer-note">SmartEco</p>
+            <p id="footer-note"></p>
             <div id="company-info-details"></div>
             <p id="copyright">&copy; 2025 SmartEco All rights reserved.</p>
         </div>
